--- a/src/app.html
+++ b/src/app.html
@@ -9,5 +9,6 @@
 	</head>
 	<body>
 		<div>%svelte.body%</div>
+		<script src="https://unpkg.com/flowbite@latest/dist/flowbite.js"></script>
 	</body>
 </html>
